# mcpHelp

./: .gitignore  README.md  install.ps1  pyproject.toml
mcp_help/: __init__.py
mcp_help/servers/: __init__.py
mcp_help/servers/mikrotik/: __init__.py  config.py  routeros.py  server.py  ssh.py
tests/: test_mikrotik_contract.py
